--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "^0.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.5",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
