--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ryanminjaeshin/proxy-fec#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "build": "^0.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
