--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "nodemon": "^2.0.4",
+    "proxy": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
